Corrected issue with z-index and loader doc

--- a/definitions/elements/_loader.scss
+++ b/definitions/elements/_loader.scss
@@ -2,27 +2,26 @@
 
 // Loader container
 #loader.loading {
-  cursor: default;
-  pointer-events: none;
   z-index: $z-index-loader;
+  cursor: default;
 }
 
 // Loader backdrop
-.loading:before {
+#loader.loading:before {
   position: fixed;
   content: '';
 
   top: 0;
   left: 0;
-
-  background: rgba(colorset($color-white), 0.8);
   width: 100%;
   height: 100%;
+
+  background: rgba(colorset($color-white), 0.8);
   z-index: 100;
 }
 
 // Loader spinner
-.loading:after {
+#loader.loading:after {
   position: fixed;
   content: '';
   top: 50%;
