--- a/definitions/globals/_variables.scss
+++ b/definitions/globals/_variables.scss
@@ -164,7 +164,7 @@ $large-desktop-breakpoint                   : '>=desktop-med';
 // Warning: change item values on this list with caution
 
 
-$z-index-main                                : 1000 !default;
+
 $z-index-navbar                              : 1040 !default;
 $z-index-loader                              : 1050 !default;
 $z-index-sidebar                             : 1060 !default;
