--- a/definitions/modules/_popup.scss
+++ b/definitions/modules/_popup.scss
@@ -4,5 +4,5 @@
 
 .popup {
   z-index: $z-index-popup;
-  position: absolute;
+  position: fixed;
 }
